fix: Dark Mode

--- a/System/static/pst-settings.css
+++ b/System/static/pst-settings.css
@@ -156,7 +156,7 @@ html[data-theme=light]{
   --sd-color-primary-text:        var(--pst-color-primary-text);
   --sd-color-primary-highlight:   var(--pst-color-primary-highlight);
   --pst-color-secondary:          var(--Color-NOELGA-Gelb);
-  --pst-color-secondary-text:   var(--Color-NOELGA-Dunkelblau);
+  --pst-color-secondary-text:     var(--Color-NOELGA-Dunkelblau);
   --pst-color-secondary-highlight:var(--Color-NOELGA-Gelb);
   --sd-color-secondary:           var(--pst-color-secondary);
   --sd-color-secondary-text:      var(--pst-color-secondary-text);
@@ -174,15 +174,15 @@ html[data-theme=light]{
   --sd-color-info-text:           var(--pst-color-info-text);
   --sd-color-info-highlight:      var(--pst-color-info-highlight);
   --pst-color-warning:          #ee9040;
-  --pst-color-warning-text:#fff;
+  --pst-color-warning-text:     #fff;
   --pst-color-warning-highlight:#cf6912;
-  --sd-color-warning:var(--pst-color-warning);
-  --sd-color-warning-text:var(--pst-color-warning-text);
-  --sd-color-warning-highlight:var(--pst-color-warning-highlight);
-  --pst-color-danger:#dc3545;
-  --pst-color-danger-text:#fff;
-  --pst-color-danger-highlight:#a71d2a;
-  --sd-color-danger:var(--pst-color-danger);
+  --sd-color-warning:             var(--pst-color-warning);
+  --sd-color-warning-text:        var(--pst-color-warning-text);
+  --sd-color-warning-highlight:   var(--pst-color-warning-highlight);
+  --pst-color-danger:           #dc3545;
+  --pst-color-danger-text:      #fff;
+  --pst-color-danger-highlight: #a71d2a;
+  --sd-color-danger:            var(--pst-color-danger);
   --sd-color-danger-text:var(--pst-color-danger-text);
   --sd-color-danger-highlight:var(--pst-color-danger-highlight);
   --pst-color-light:#c9c9c9;
@@ -218,50 +218,50 @@ html[data-theme=light]{
 }
 
 html[data-theme=dark]{
-  --pst-heading-color:        var(--Color-NOELGA-Hellblau);
+  --pst-heading-color:        var(--Solarized-BG-dark);
   --pst-color-attention:      var(--Solarized-Orange);
   --pst-color-text-base:      var(--Solarized-Text-dark);
   --pst-color-text-muted:   #a6a6a6;
-  --pst-color-shadow:       #212121;
+  --pst-color-shadow:       var(--Solarized-Text-light);
   --pst-color-border:       silver;
   --pst-color-inline-code:    var(--Solarized-Cyan);
   --pst-color-target:       #472700;
-  --pst-color-background:     var(--Color-NOELGA-Blaugrau-hell);
-  --pst-color-on-background:#1e1e1e;
+  --pst-color-background:     var(--Solarized-BG-dark-contrast);
+  --pst-color-on-background:var(--Solarized-BG-dark);
   --pst-color-surface:      #212121;
-  --pst-color-on-surface:   #373737;
-  --pst-color-link:           var(--Solarized-Orange);
+  --pst-color-on-surface:   var(--Solarized-BG-dark);
+  --pst-color-link:           var(--Solarized-Blue);
   --pst-color-link-hover:     var(--Solarized-Green);
 
-  --bd-sidebar-primary-background-color:var(--Color-NOELGA-Blaugrau-dunkel);
+  --bd-sidebar-primary-background-color:var(--Solarized-BG-dark);
 
-  --pst-color-primary:              var(--Solarized-Orange);
-  --pst-color-primary-text:       #fff;
-  --pst-color-primary-highlight:  #306e81;
+  --pst-color-primary:              var(--Solarized-Blue);
+  --pst-color-primary-text:         #fff;
+  --pst-color-primary-highlight:    #306e81;
   --sd-color-primary:               var(--pst-color-primary);
   --sd-color-primary-text:          var(--pst-color-primary-text);
   --sd-color-primary-highlight:     var(--pst-color-primary-highlight);
-  --pst-color-secondary:          #ee9040;
-  --pst-color-secondary-text:     #fff;
-  --pst-color-secondary-highlight:#cf6912;
+  --pst-color-secondary:            #ee9040;
+  --pst-color-secondary-text:       #fff;
+  --pst-color-secondary-highlight:  #cf6912;
   --sd-color-secondary:             var(--pst-color-secondary);
   --sd-color-secondary-text:        var(--pst-color-secondary-text);
   --sd-color-secondary-highlight:   var(--pst-color-secondary-highlight);
-  --pst-color-success:            #488757;
-  --pst-color-success-text:       #fff;
-  --pst-color-success-highlight:  #2d5537;
+  --pst-color-success:              #488757;
+  --pst-color-success-text:         #fff;
+  --pst-color-success-highlight:    #2d5537;
   --sd-color-success:               var(--pst-color-success);
   --sd-color-success-text:          var(--pst-color-success-text);
   --sd-color-success-highlight:     var(--pst-color-success-highlight);
-  --pst-color-info:               #459db9;
-  --pst-color-info-text:          #fff;
-  --pst-color-info-highlight:#306e81;
-  --sd-color-info:var(--pst-color-info);
-  --sd-color-info-text:var(--pst-color-info-text);
-  --sd-color-info-highlight:var(--pst-color-info-highlight);
-  --pst-color-warning:#ee9040;
-  --pst-color-warning-text:#fff;
-  --pst-color-warning-highlight:#cf6912;
+  --pst-color-info:                 #459db9;
+  --pst-color-info-text:            #fff;
+  --pst-color-info-highlight:       #306e81;
+  --sd-color-info:                  var(--pst-color-info);
+  --sd-color-info-text:             var(--pst-color-info-text);
+  --sd-color-info-highlight:        var(--pst-color-info-highlight);
+  --pst-color-warning:              #ee9040;
+  --pst-color-warning-text:         #fff;
+  --pst-color-warning-highlight:    #cf6912;
   --sd-color-warning:var(--pst-color-warning);
   --sd-color-warning-text:var(--pst-color-warning-text);
   --sd-color-warning-highlight:var(--pst-color-warning-highlight);
@@ -300,7 +300,15 @@ html[data-theme=dark]{
   --pst-color-white-highlight:#d9d9d9;
   --sd-color-white:var(--pst-color-white);
   --sd-color-white-text:var(--pst-color-white-text);
-  --sd-color-white-highlight:var(--pst-color-white-highlight)
+  --sd-color-white-highlight:var(--pst-color-white-highlight);
+
+  .bd-article-container h1, .bd-article-container h2, .bd-article-container h3, .bd-article-container h4, .bd-article-container h5, .bd-article-container p.caption {
+    color: var(--Solarized-Text-dark);
+  }
+
+  body {
+    font-weight: 400;
+  }
 }
 
 html[data-theme=dark],html[data-theme=light]{
